--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,8 @@ nav ul li a {
     color: #333;
 }
 
-footer {
+footer 
+{
     background-color: #0044cc;
     color: white;
     text-align: center;
