--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
 header {
     background-color: #cc0000;
     color: white;
-    padding: 20px;
+    padding: 20;
     text-align: center;
 }
 
