--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ nav ul li a {
 
 .cta {
     display: inline-block;
-    padding: 10px 20px;
+    padding: 10 20;
     background-color: #00cc11;
     color: white;
     text-decoration: none;
