--- a/styles.css
+++ b/styles.css
@@ -85,14 +85,14 @@ nav ul li a {
 
 /* About Section */
 #about {
-    padding: 50px;
+    padding: 50;
     background-color: #e8f0ff;
     text-align: center;
 }
 
 /* Contact Section */
 #contact {
-    padding: 50px;
+    padding: 50;
     background-color: #fff;
     text-align: center;
 }
