--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 * {
     margin: 0;
-    padding: 40;
+    padding: 40px;
     box-sizing: border-box;
 }
 
@@ -13,13 +13,13 @@ body {
 header {
     background-color: #cc0000;
     color: white;
-    padding: 20;
+    padding: 20px;
     text-align: center;
 }
 
 nav ul {
     list-style: none;
-    padding: 0;
+    padding: 20px;
 }
 
 nav ul li {
@@ -33,7 +33,7 @@ nav ul li a {
 }
 
 #intro {
-    padding: 50;
+    padding: 50px;
     text-align: center;
     background-color: #e8f0ff;
 }
@@ -44,8 +44,8 @@ nav ul li a {
     background-color: #00cc11;
     color: white;
     text-decoration: none;
-    border-radius: 5;
-    margin-top: 20;
+    border-radius: 5px;
+    margin-top: 20px;
 }
 
 /* Services, About, Contact sections hidden initially */
