--- a/styles.css
+++ b/styles.css
@@ -104,7 +104,7 @@ nav ul li a {
 
 footer 
 {
-    background-color: #0044cc;
+    background-color: white;
     color: white;
     text-align: center;
     padding: 10px 0;
